# knuth-taocp

./: .editorconfig  .gitattributes  .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  SYLLABUS.md  config.local.example.json  grade  grade.cmd  grade.ps1  rust-toolchain.toml
.claude/agents/: knuth-combinatorial.md  knuth-concrete-math.md  knuth-fundamentals.md  knuth-seminumerical.md  knuth-sorting.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  lesson_feedback.md
.github/workflows/: manifest-check.yml  mutation.yml  pages.yml  verify.yml
course/module-01-algorithms/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-02-math/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-03-structures/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-04-random/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-05-arithmetic/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-06-sorting/: README.md  WALKTHROUGH.md  exercises.md  hints.md
course/module-07-searching/: README.md  WALKTHROUGH.md  exercises.md  hints.md
docs/: concrete-mathematics.md  dashboard.html  for-newcomers.md  getting-started.md  glossary.md  toolkit.md  why-knuth-matters.md
githooks/: pre-commit  pre-commit.ps1
grader/: Cargo.toml
reference/: Cargo.toml
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars-handbook.ts
(+305 files in other folders)
